--- a/watchesMarketplace/styles-Todos.css
+++ b/watchesMarketplace/styles-Todos.css
@@ -123,22 +123,78 @@ body {
     transform: rotate(45deg);
 }
 
+/* Style Searchbox */
+.searchBox {
+    position: absolute;
+    /* top: 50%;
+    left: 50%;
+    transform:  translate(-50%,50%); */
+    background: #2f3640;
+    height: 40px;
+    border-radius: 40px;
+    margin-top: 25px;
+    margin-left: 20px;
+}
+
+.searchBox:hover > .searchInput {
+    width: 240px;
+    padding: 0 6px;
+}
+
+.searchBox:hover > .searchButton {
+  background: white;
+  color : #2f3640;
+}
+
+.searchInput {
+    border:none;
+    background: none;
+    outline:none;
+    float:left;
+    padding: 0;
+    color: white;
+    font-size: 16px;
+    transition: 1s;
+    line-height: 40px;
+    width: 0px;
+    box-sizing: border-box;
+}
+
+.searchButton {
+    color: white;
+    float: right;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #2f3640;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 1s;
+}
+
+@media screen and (max-width: 620px) {
+.searchBox:hover > .searchInput {
+    width: 150px;
+    padding: 0 6px;
+}
+}
+
 /* Style content nav for computers*/
 .content{
-        display:grid;
-        grid-template-columns: repeat(4,1 fr);
-        grid-auto-rows: minmax(100px, auto);
-        max-width: 100vw;
-        margin: 0 auto;
-        grid-gap: 10px;
-        grid-template-areas: 
-        "header header header header"
-        "nav main main main"
-        "nav main main main"
-        "nav main main main"
-        "nav main main main"
-        "nav main main main"
-        "footer footer footer footer";
+    display:grid;
+    grid-template-columns: repeat(4,1 fr);
+    grid-auto-rows: minmax(100px, auto);
+    max-width: 100vw;
+    margin: 0 auto;
+    grid-gap: 10px;
+    grid-template-areas: 
+    "header header header header"
+    "nav main main main"
+    "nav main main main"
+    "nav main main main"
+    "nav main main main"
+    "footer footer footer footer";
 }
 
 /* Style content nav for mobile phones*/
@@ -197,6 +253,11 @@ header{
     background-color: green;
 }
 
+searchBox {
+    grid-area: header;
+    background-color: maroon;
+}
+
 main{
     grid-area: main;
     background-color: red;
@@ -212,6 +273,10 @@ footer{
     background-color: violet;
 }
 
-#noBullet{
+.noBullet{
     list-style: none;
 }
+
+a:link {
+    text-decoration: none;
+  }
