--- a/watchesMarketplace/styles-Todos.css
+++ b/watchesMarketplace/styles-Todos.css
@@ -1,282 +1,259 @@
-*{
-    padding:0;
-    margin:0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css?family=Lato:400,700");
+
+:root {
+  --primaryColor: #f09d51;
+  --mainWhite: #fff;
+  --mainBlack: #222;
+  --mainGrey: #ececec;
+  --mainSpacing: 0.1rem;
+  --mainTransition: all 0.3s linear;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 body {
-    height:100vh;
-    background-image: url("./Poze/ws_Tree_bokeh_2560x1600.jpg"); 
-    background-attachment: fixed;
-    background-size: cover;
-    font-family: sans-serif;
+  color: var(--mainBlack);
+  background: var(--mainWhite);
+  font-family: "Lato", sans-serif;
+}
+/* --------------- Navbar ---------------- */
+.navbar {
+  position: sticky;
+  top: 0;
+  height: 60px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background: rgb(231, 226, 221);
+  z-index: 1;
+}
+.navbar-center {
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1.5rem;
+}
+.nav-icon {
+  font-size: 1.5rem;
+}
+.cart-btn {
+  position: relative;
+  cursor: pointer;
+}
+.cart-items {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background: var(--primaryColor);
+  padding: 0 5px;
+  border-radius: 30%;
+  color: var(--mainWhite);
+}
+/* --------------- End of Navbar ---------------- */
+/* --------------- Hero ---------------- */
+.hero {
+  min-height: calc(100vh - 60px);
+  background: url("./Poze/ws_Tree_bokeh_2560x1600.jpg") center/cover no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.banner {
+  text-align: center;
+  background: rgba(255, 255, 255, 0.8);
+  display: inline-block;
+  padding: 2rem;
+}
+.banner-title {
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: var(--mainSpacing);
+  margin-bottom: 3rem;
+}
+.banner-btn {
+  padding: 1rem 3rem;
+  text-transform: uppercase;
+  letter-spacing: var(--mainSpacing);
+  font-size: 1rem;
+  background: var(--primaryColor);
+  color: var(--mainBlack);
+  border: 1px solid var(--primaryColor);
+  transition: var(--mainTransition);
+  cursor: pointer;
+}
+.banner-btn:hover {
+  background: transparent;
+  color: var(--primaryColor);
+}
+/* --------------- End of Hero ---------------- */
+/* --------------- Products ---------------- */
+
+.products {
+  padding: 4rem 0;
+}
+.section-title h2 {
+  text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 5rem;
+  text-transform: capitalize;
+  letter-spacing: var(--mainSpacing);
+}
+.products-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  grid-column-gap: 1.5rem;
+  grid-row-gap: 2rem;
+}
+.img-container {
+  position: relative;
+  overflow: hidden;
+}
+.bag-btn {
+  position: absolute;
+  top: 70%;
+  right: 0;
+  background: var(--primaryColor);
+  border: none;
+  text-transform: uppercase;
+  padding: 0.5rem 0.75rem;
+  letter-spacing: var(--mainSpacing);
+  font-weight: bold;
+  transition: var(--mainTransition);
+  transform: translateX(101%);
+  cursor: pointer;
+}
+.bag-btn:hover {
+  color: var(--mainWhite);
+}
+.fa-shopping-cart {
+  margin-right: 0.5rem;
+}
+.img-container:hover .bag-btn {
+  transform: translateX(0);
+}
+.product-img {
+  display: block;
+  width: 100%;
+  min-height: 12rem;
+  transition: var(--mainTransition);
+}
+.img-container:hover .product-img {
+  opacity: 0.5;
 }
 
-.menu-bar{
-    background: orange;
-    text-align: center;
-}
-.menu-bar ul{
-    display: inline-flex;
-    list-style: none;
-    color: #fff;
-}
-.menu-bar ul li {
-    width:120px;
-    margin: 15px;
-    padding: 15px;
-}
-.menu-bar ul li a {
-    text-decoration: none;
-    color: #fff;
-}
-.active, .menu-bar ul li:hover{
-    background: rgb(248, 181, 57);
-    border-radius: 3px;
+.product h3 {
+  text-transform: capitalize;
+  font-size: 1.1rem;
+  margin-top: 1rem;
+  letter-spacing: var(--mainSpacing);
+  text-align: center;
 }
 
-.dropdown {
-    position: relative;
-    display: inline-block;
+.product h4 {
+  margin-top: 0.7rem;
+  letter-spacing: var(--mainSpacing);
+  color: var(--primaryColor);
+  text-align: center;
+}
+
+/* ---------------End of Products ---------------- */
+/* --------------- Cart ---------------- */
+.cart-overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  transition: var(--mainTransition);
+  background: rgb(240, 157, 81, 0.5);
+  z-index: 2;
+  visibility: hidden;
+}
+.cart {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  z-index: 3;
+  background: rgb(231, 226, 221);
+  padding: 1.5rem;
+  transition: var(--mainTransition);
+  transform: translateX(100%);
+}
+.showCart {
+  transform: translateX(0);
+}
+.transparentBcg {
+  visibility: visible;
+}
+@media screen and (min-width: 768px) {
+  .cart {
+    width: 30vw;
+    min-width: 450px;
   }
-  
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: orange;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-.dropdown a:hover {background-color:rgb(248, 181, 57);}
-
-.show {display: block;}
-
-/*The checkbox nav container*/
-.nav{
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 18px;
-    max-width: 100px;
 }
 
-/*Hide the browser's default checkbox*/
-.nav input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-  }
-
-/* Create a custom checkbox */
-.checkmark {
-    position: absolute;
-    top:0;
-    left:0;
-    height: 25px;
-    width: 25px;
-    background-color:#fff;
+.close-cart {
+  font-size: 1.7rem;
+  cursor: pointer;
 }
-
-/* On mouse-over, add a grey background color */
-.nav:hover input ~ .checkmark {
-    background-color:#ccc;
+.cart h2 {
+  text-transform: capitalize;
+  text-align: center;
+  letter-spacing: var(--mainSpacing);
+  margin-bottom: 2rem;
 }
-
-/* When the checkbox is checked, add a blue background */
-.nav input:checked ~ .checkmark {
-    background-color: #2196f3;
+/*---------- Cart Item -------------------- */
+.cart-item {
+  display: grid;
+  align-items: center;
+  grid-template-columns: auto 1fr auto;
+  grid-column-gap: 1.5rem;
+  margin: 1.5rem 0;
 }
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after{
-    content: "";
-    position: absolute;
-    display: none;
+.cart-item img {
+  width: 75px;
+  height: 75px;
 }
-
-/* Show the checkmark when checked */
-.nav input:checked ~ .checkmark:after {
-    display: block;
+.cart-item h4 {
+  font-size: 0.85rem;
+  text-transform: capitalize;
+  letter-spacing: var(--mainSpacing);
 }
-
-/* Style the checkmark/indicator */
-.nav .checkmark:after {
-    left: 9px;
-    top: 5px;
-    width: 5px;
-    height: 10px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    transform: rotate(45deg);
+.cart-item h5 {
+  margin: 0.5rem 0;
+  letter-spacing: var(--mainSpacing);
 }
-
-/* Style Searchbox */
-.searchBox {
-    position: absolute;
-    /* top: 50%;
-    left: 50%;
-    transform:  translate(-50%,50%); */
-    background: #2f3640;
-    height: 40px;
-    border-radius: 40px;
-    margin-top: 25px;
-    margin-left: 20px;
+.item-amount {
+  text-align: center;
 }
-
-.searchBox:hover > .searchInput {
-    width: 240px;
-    padding: 0 6px;
+.remove-item {
+  color: grey;
+  cursor: pointer;
 }
-
-.searchBox:hover > .searchButton {
-  background: white;
-  color : #2f3640;
+.fa-chevron-up,
+.fa-chevron-down {
+  color: var(--primaryColor);
+  cursor: pointer;
 }
+/*---------- End of Cart Item -------------------- */
 
-.searchInput {
-    border:none;
-    background: none;
-    outline:none;
-    float:left;
-    padding: 0;
-    color: white;
-    font-size: 16px;
-    transition: 1s;
-    line-height: 40px;
-    width: 0px;
-    box-sizing: border-box;
+.cart-footer {
+  margin-top: 2rem;
+  letter-spacing: var(--mainSpacing);
+  text-align: center;
 }
-
-.searchButton {
-    color: white;
-    float: right;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background: #2f3640;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 1s;
+.cart-footer h3 {
+  text-transform: capitalize;
+  margin-bottom: 1rem;
 }
-
-@media screen and (max-width: 620px) {
-.searchBox:hover > .searchInput {
-    width: 150px;
-    padding: 0 6px;
-}
-}
-
-/* Style content nav for computers*/
-.content{
-    display:grid;
-    grid-template-columns: repeat(4,1 fr);
-    grid-auto-rows: minmax(100px, auto);
-    max-width: 100vw;
-    margin: 0 auto;
-    grid-gap: 10px;
-    grid-template-areas: 
-    "header header header header"
-    "nav main main main"
-    "nav main main main"
-    "nav main main main"
-    "nav main main main"
-    "footer footer footer footer";
-}
-
-/* Style content nav for mobile phones*/
-/* @media screen and (max-width:700px){
-    .container-nav {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-auto-rows: minmax(50px, auto);
-        max-width: 100vw;
-        margin: 0px;
-        grid-gap: 0px;
-        height: auto;
-    }
-    main{
-        width:450px;
-        height: auto;
-    }
-    .content{
-        display:grid;
-        grid-template-columns: repeat(1,1 fr);
-        grid-auto-rows: minmax(100px, auto);
-        max-width: 100vw;
-        margin: 0 auto;
-        grid-gap: 5px;
-        grid-template-areas: 
-        "header"
-        "nav"
-        "main"
-        "main"
-        "main"
-        "footer";
-    }
-    .container-nav > *{
-        background:green;
-        padding:5px;
-    }                                                       
-} */
-
-/* Style container nav */
-.container-nav{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-    max-width: 100vw;
-    margin: 0 auto;
-    grid-gap: 10px;
-}
-
-.container-nav > *{
-    background:#3bbced;
-    padding:30px;
-}
-
-header{
-    grid-area: header;
-    background-color: green;
-}
-
-searchBox {
-    grid-area: header;
-    background-color: maroon;
-}
-
-main{
-    grid-area: main;
-    background-color: red;
-}
-
-nav{
-    grid-area: nav;
-    background-color: blue;
-}
-
-footer{
-    grid-area: footer;
-    background-color: violet;
-}
-
-.noBullet{
-    list-style: none;
-}
-
-a:link {
-    text-decoration: none;
-  }
